--- a/dyann_portfolio/index.html
+++ b/dyann_portfolio/index.html
@@ -115,7 +115,7 @@
           <p>Live web app that tracks workouts and weights with a simple leaderboard. Built with Firebase/Firestore. Focused on clean UI, form validation, and real‑time updates.</p>
           <div class="links">
             <a href="#" title="Replace with live demo URL">Live Demo</a>
-            <a href="#" title="Replace with GitHub repo URL">GitHub</a>
+            <a href="#" title="https://github.com/dyanncameron/fitness-challenge">GitHub</a>
             <a href="#" title="Short write‑up">Case Study</a>
           </div>
         </div>
@@ -131,7 +131,7 @@
           <p>Prototype that lets users pin issues on a map, attach photos, and submit reports. Includes location prompts and micro‑interactions for clarity.</p>
           <div class="links">
             <a href="#" title="Figma or live link">Prototype</a>
-            <a href="#" title="Replace with GitHub link">GitHub</a>
+            <a href="#" title="Replace with GitHub link">https://github.com/thilinaw513/Mission-4-X-Fixit</a>
             <a href="#" title="Short write‑up">Case Study</a>
           </div>
         </div>
